k3s_yaml/k3s_frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend

spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      nodeName: ccsa-manager
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: frontend-content
              mountPath: /usr/share/nginx/html
              readOnly: true
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/default.conf
              readOnly: true
      volumes:
        - name: frontend-content
          hostPath:
            path: /home/jacob/Desktop/ccsa_hw3/frontend
            type: DirectoryOrCreate
        - name: nginx-conf
          hostPath:
            path: /home/jacob/Desktop/ccsa_hw3/frontend/nginx.conf
            type: File
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
